# gw2-oktw-teleports-sync

./: .gitignore  Cargo.toml  README.md  teleport.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs  manager.rs  types.rs
src/remote/: github.rs  mod.rs  provider.rs
src/sync/: mod.rs  state.rs
src/ui/: app.rs  events.rs  mod.rs  render.rs
